<resources>
    <string name="app_name">Bible</string>
    <string name="grant_permission">This app needs to write to external storage to perform properly. Please consider granting the permission</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="defaultReference">Gen 1:1</string>
    <string name="defaultRibbonName">Start another Ribbon</string>
    <string name="lastVisited">Last visited: </string>
    <string name="neverVisited">never</string>
    <string name="translationViewDefaultText">None</string>
    <string name="unable_to_load_bible">Unable to load %s...</string>
    <string name="verse_followed_by_number">%1$s %2$d</string>
    <string name="spacing_between_number_and_verse">" "</string>
    <string name="spacing_between_verse_and_number">" "</string>
    <string name="submit_reference_selector">Go</string>
    <string name="count_deleted">Successfully deleted</string>
    <string name="undo_count_deleted">undo</string>
    <string name="start_new_ribbon_dialog_title">Start a new Ribbon</string>
    <string name="choose_name_for_ribbon">"Choose a name: "</string>
    <string name="ok">OK</string>
    <string name="choose_name_for_ribbon_explanation">Ribbons represent bookmarks you can use to keep track of your reading in different contexts. Choose a name for your ribbon below:</string>
    <string name="church_suggestion">Church</string>
    <string name="custom_ribbon_name_hint">Other:</string>

    <string name="title_activity_splash">@string/app_name</string>
    <string name="activity_reading_menu_go_to_ribbons_title">View Ribbons</string>
    <string
        name="refuse_back_to_deleted_ribbon">Ribbon has been deleted: cannot go back to it.</string>
    <string name="edit_ribbon_name_dialog_title">Edit Name</string>
    <string name="activity_reading_new_ribbon_here_title">New Ribbon Here</string>
</resources>
