<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/ribbonViewHeight"
    android:background="@drawable/selectable_and_draggable_item"
    android:clickable="true"
    android:elevation="4dp"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/ribbonViewSubView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/lastVisitedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/lastVisited"
            android:textSize="@dimen/ribbonSubViewTextSize"/>

        <TextView
            android:id="@+id/lastVisitedDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/lastVisitedTextView"
            android:layout_toRightOf="@id/lastVisitedTextView"
            android:text="@string/neverVisited"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/ribbonSubViewTextSize"/>

        <TextView
            android:id="@+id/translationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toRightOf="@id/lastVisitedDateView"
            android:layout_toEndOf="@id/lastVisitedDateView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/translationViewDefaultText"
            android:textSize="@dimen/ribbonSubViewTextSize"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ribbonViewMainView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/ribbonViewSubView"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="16">

        <TextView
            android:id="@+id/nameView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/defaultRibbonName"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/ribbonTextSize"/>

        <TextView
            android:id="@+id/ribbonViewEmptyView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/referenceView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="end"
            android:text="@string/defaultReference"
            android:textSize="@dimen/ribbonTextSize"/>
    </LinearLayout>

</RelativeLayout>