<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_new_ribbon_dialog_title"
            android:textColor="@color/dialog_title_text_color"
            android:textSize="@dimen/dialog_title_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_name_for_ribbon_explanation"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/new_ribbon_dialog_text_size"/>

        <EditText
            android:id="@+id/custom_ribbon_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_ribbon_name_hint"
            android:imeOptions="actionGo"
            android:inputType="textAutoCorrect|textCapWords"
            android:maxLines="1"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/new_ribbon_dialog_text_size"/>

        <LinearLayout
            android:id="@+id/ribbon_name_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>
</ScrollView>